# SwineDesk_Python

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  railway.toml  requirements.txt  seed_optimization_scenario.py  seed_swine_leaders.py  test_beta_approvals.py  test_sms_webhook.py
swinedesk/: __init__.py  agent.py  app.py  backend_client.py  beta_approvals.py  daily_summary.py  hellosign.py  negotiations.py  notifications.py  phone_region.py  prompts.py  reminders.py  session.py  settings.py  state.py  tool_dispatcher.py  tool_helpers.py  tool_loader.py  tooling.py  voice.py
swinedesk/tools/: __init__.py
swinedesk/tools/actors/get_actor_profile/: tool.py
swinedesk/tools/actors/resolve_actor_by_phone/: tool.py
swinedesk/tools/crm/add_note/: tool.py
swinedesk/tools/crm/find_contacts/: tool.py
swinedesk/tools/crm/get_daily_recap/: tool.py
swinedesk/tools/crm/get_history/: tool.py
swinedesk/tools/crm/get_pending_tasks/: tool.py
swinedesk/tools/crm/get_upcoming_loads/: tool.py
swinedesk/tools/driver/get_my_loads/: tool.py
swinedesk/tools/driver/report_offload/: tool.py
swinedesk/tools/driver/report_pickup/: tool.py
swinedesk/tools/grading/get_submission_status/: tool.py
swinedesk/tools/grading/record_grading_adjustment/: tool.py
swinedesk/tools/grading/submit_grading/: tool.py
swinedesk/tools/grading/update_grading_draft/: tool.py
swinedesk/tools/health/confirm_vet_to_vet/: tool.py
swinedesk/tools/health/get_cert_instructions/: tool.py
swinedesk/tools/health/get_vet_pending_loads/: tool.py
(+43 files in other folders)
