[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swinedesk"
version = "0.1.0"
description = "SwineDesk SMS assistant skeleton with local tool-based agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "twilio>=9.2.0",
  "python-multipart>=0.0.9",
  "pydantic-ai>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["swinedesk"]

[tool.ruff]
line-length = 100
target-version = "py311"

